{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 13,
  "lineage": "b2140aa7-d07e-ee81-2e19-77ffa072e89b",
  "resources": [
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:network-acl/acl-0031846928b4a080e",
            "default_network_acl_id": "acl-0031846928b4a080e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0031846928b4a080e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "295793222430",
            "subnet_ids": [],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-0190388c12d51c2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dabsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:route-table/rtb-041c7078f19492188",
            "default_route_table_id": "rtb-041c7078f19492188",
            "id": "rtb-041c7078f19492188",
            "owner_id": "295793222430",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0190388c12d51c2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dabsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:security-group/sg-092082b0f758c7d46",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-092082b0f758c7d46",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "295793222430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-0190388c12d51c2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dabsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:internet-gateway/igw-0039e4767f3a9f231",
            "id": "igw-0039e4767f3a9f231",
            "owner_id": "295793222430",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0190388c12d51c2a0"
          },
          "dependencies": [
            "module.dabsvpc.aws_vpc.this",
            "module.dabsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0039e4767f3a9f231",
            "id": "r-rtb-041dfe858beaf02c81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-041dfe858beaf02c8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dabsvpc.aws_internet_gateway.this",
            "module.dabsvpc.aws_route_table.public",
            "module.dabsvpc.aws_vpc.this",
            "module.dabsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:route-table/rtb-041dfe858beaf02c8",
            "id": "rtb-041dfe858beaf02c8",
            "owner_id": "295793222430",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-public"
            },
            "tags_all": {
              "Name": "-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0190388c12d51c2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dabsvpc.aws_vpc.this",
            "module.dabsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce3c2de0ac255942",
            "route_table_id": "rtb-041dfe858beaf02c8",
            "subnet_id": "subnet-0fef99400e76b0bdc"
          },
          "dependencies": [
            "module.dabsvpc.aws_route_table.public",
            "module.dabsvpc.aws_subnet.public",
            "module.dabsvpc.aws_vpc.this",
            "module.dabsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057a3498e102c8aef",
            "route_table_id": "rtb-041dfe858beaf02c8",
            "subnet_id": "subnet-02c7666b7a0163fae"
          },
          "dependencies": [
            "module.dabsvpc.aws_route_table.public",
            "module.dabsvpc.aws_subnet.public",
            "module.dabsvpc.aws_vpc.this",
            "module.dabsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:subnet/subnet-0fef99400e76b0bdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.7.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fef99400e76b0bdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "295793222430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-us-east-1a"
            },
            "tags_all": {
              "Name": "-public-us-east-1a"
            },
            "vpc_id": "vpc-0190388c12d51c2a0"
          },
          "dependencies": [
            "module.dabsvpc.aws_vpc.this",
            "module.dabsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:subnet/subnet-02c7666b7a0163fae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.7.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c7666b7a0163fae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "295793222430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-us-east-1b"
            },
            "tags_all": {
              "Name": "-public-us-east-1b"
            },
            "vpc_id": "vpc-0190388c12d51c2a0"
          },
          "dependencies": [
            "module.dabsvpc.aws_vpc.this",
            "module.dabsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:vpc/vpc-0190388c12d51c2a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-0031846928b4a080e",
            "default_route_table_id": "rtb-041c7078f19492188",
            "default_security_group_id": "sg-092082b0f758c7d46",
            "dhcp_options_id": "dopt-05e17d24e97cbfbb5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0190388c12d51c2a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041c7078f19492188",
            "owner_id": "295793222430",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    }
  ]
}